--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -2,8 +2,17 @@
 layout: default
 ---
 
-<h1>{{ page.title }}</h1>
-<p><em>{{ page.date | date: "%B %d, %Y" }}</em></p>
-<div>
-  {{ content }}
-</div>
+<article class="news-page">
+  <h1>{{ page.title }}</h1>
+  <p><em>{{ page.date | date: "%B %d, %Y" }}</em></p>
+
+  {% if page.image %}
+    <div class="news-image">
+      <img src="{{ page.image | relative_url }}" alt="{{ page.title }}">
+    </div>
+  {% endif %}
+
+  <div class="news-content">
+    {{ content }}
+  </div>
+</article>
