--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -2,17 +2,8 @@
 layout: default
 ---
 
-<article class="news-page">
-  <h1>{{ page.title }}</h1>
-  <p><em>{{ page.date | date: "%B %d, %Y" }}</em></p>
-
-  {% if page.image %}
-    <div class="news-image">
-      <img src="{{ page.image | relative_url }}" alt="{{ page.title }}">
-    </div>
-  {% endif %}
-
-  <div class="news-content">
-    {{ content }}
-  </div>
-</article>
+<h1>{{ page.title }}</h1>
+<p><em>{{ page.date | date: "%B %d, %Y" }}</em></p>
+<div>
+  {{ content }}
+</div>
